# git-mood

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
src/: hook.rs  main.rs  sentiment.rs  svg.rs
