[package]
name = "git-mood"
version = "0.1.2"
edition = "2021"
description = "Color your GitHub contribution graph with the mood of your git commits"
license = "MIT"
repository = "https://github.com/anilcan-kara/git-mood"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
